--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,24 @@
-aiofiles==23.2.1
+aiofiles
 aiohttp
-asyncio==3.4.3
+asyncio
 dnspython
 ffmpeg-python
 gitpython
 hachoir
 heroku3
 lyricsgenius
-motor==3.0.0
-pillow==9.5.0
+motor
+pillow
 psutil
-py-tgcalls==0.8.6
+py-tgcalls
 pykeyboard
 pyrogram==1.4.16
 python-dotenv
-pyyaml==5.3.1
+pyyaml
 requests
 speedtest-cli
 spotipy
-tgcrypto==1.2.5
-git+https://github.com/yt-dlp/yt-dlp@master
-git+https://github.com/alexmercerind/youtube-search-python@main
-git+https://github.com/joetats/youtube_search@master
+tgcrypto
+youtube-search
+youtube-search-python
+yt-dlp
